SigmaCodebackup3rdSep/objects/Resource_Working_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_Part_1__c</fullName>
        <label>End Time Part 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_Time_Part_2__c</fullName>
        <label>End Time Part 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>Service_Resource__c</referenceTo>
        <relationshipLabel>Resource Working Hours</relationshipLabel>
        <relationshipName>Resource_Working_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_Part_1__c</fullName>
        <label>Start Time Part 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time_Part_2__c</fullName>
        <label>Start Time Part 2</label>
        <type>Time</type>
    </fields>
    <label>Resource Working Hours</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RW-{0000}</displayFormat>
        <label>Resource Working Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Time_2_and_Start_Time_2</fullName>
        <active>true</active>
        <description>If Start Time part 2 is entered then End Time part 2 should also be entered</description>
        <errorConditionFormula>IF( ISNULL(Start_Time_Part_2__c) , IF(ISNULL(End_Time_Part_2__c), false, true), IF(ISNULL(End_Time_Part_2__c), true, false))</errorConditionFormula>
        <errorMessage>Both Start Time Part 2 and End Time Part 2 should not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_1_and_End_Time_1</fullName>
        <active>true</active>
        <description>Start Time 1 should always be lesser than End Time 1</description>
        <errorConditionFormula>IF( Start_Time_Part_1__c  &lt;=  End_Time_Part_1__c , false, true)</errorConditionFormula>
        <errorMessage>Start Time Part 1 should be lesser than End Time Part 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_2_and_End_Time_1</fullName>
        <active>true</active>
        <description>Start Time 2 should always be greater than End Time 1</description>
        <errorConditionFormula>IF( ISNULL( Start_Time_Part_2__c) , false, IF( Start_Time_Part_2__c  &gt;  End_Time_Part_1__c , false, true))</errorConditionFormula>
        <errorMessage>Start Time Part 2 should be greater than End Time Part 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_2_and_End_Time_2</fullName>
        <active>true</active>
        <description>Start Time 2 should always be lesser than End Time 2</description>
        <errorConditionFormula>IF( ISNULL( Start_Time_Part_2__c) , false, IF( Start_Time_Part_2__c  &lt;=  End_Time_Part_2__c , false, true))</errorConditionFormula>
        <errorMessage>Start Time Part 2 should be lesser than End Time Part 2</errorMessage>
    </validationRules>
</CustomObject>